# SDLMadness

./: .clang-format  BracketOdds.hpp  CMakeLists.txt  CudaApproach.cu  CudaApproach.cuh  FindBestPick.hpp  GameIndex.hpp  MonteCarlo.cpp  Pick.hpp  Util.hpp  _clang-format  explore.cpp  explore.hpp  main.cpp  readme.txt  toplevel.cmake
Data/: fivethirtyeight_ncaa_forecasts_2017.csv  fivethirtyeight_ncaa_forecasts_2018.csv
Test/: CMakeLists.txt  SDLMadnessTestsMain.cpp  baseline_forecasts.csv  fivethirtyeight_ncaa_forecasts_2018.csv  four_team_test.csv  trimmed_forecasts.csv
